--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   "author": "Sujan Maharjan",
   "license": "MIT",
   "dependencies": {
-    "react": "^15.4.2",
+    "prop-types": "^15.6.0",
+    "react": "^15.5.0",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.5.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-bootstrap": "^0.23.1",
